--- a/.github/workflows/ci-arm64ec-wine.yml
+++ b/.github/workflows/ci-arm64ec-wine.yml
@@ -49,3 +49,11 @@ jobs:
       with:
         name: wine-arm64ec-wcp
         path: "*.wcp"
+    
+    - name: Upload HarfBuzz logs
+        uses: actions/upload-artifact@v3
+        with:
+          name: harfbuzz-logs
+          path: |
+            deps/harfbuzz/meson-harfbuzz-config.log
+            deps/harfbuzz/ninja-harfbuzz-build.log
