--- a/.github/workflows/ci-arm64ec-wine.yml
+++ b/.github/workflows/ci-arm64ec-wine.yml
@@ -44,6 +44,13 @@ jobs:
       run: |
         ./build-wine.sh
 
+    - name: Upload artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: wine-arm64ec-wcp
+        path: "*.wcp"
+ 
+
     - name: Upload HarfBuzz logs
         uses: actions/upload-artifact@v3
         with:
