--- a/.github/workflows/ci-arm64ec-wine.yml
+++ b/.github/workflows/ci-arm64ec-wine.yml
@@ -1,4 +1,4 @@
-name: Build Wine‑tkg ARM64EC
+name: Build Wine‑TKG ARM64EC
 
 on:
   workflow_dispatch:
@@ -7,68 +7,74 @@ jobs:
   build_wine_tkg:
     runs-on: ubuntu-latest
 
-    # Запускаем Arch Linux контейнер
     container:
       image: archlinux:latest
 
     env:
-      # Имя выходного .wcp
       WCP_NAME: wine-11.1-staging-tkg-arm64ec
 
     steps:
 
-    # Клонируем репозиторий
     - name: Checkout repository
       uses: actions/checkout@v4
       with:
         fetch-depth: 0
 
-    # Инициализируем pacman keyring
-    - name: Initialize pacman keyring
+    - name: Enable multilib in pacman
       run: |
-        # Без этого pacman может не работать в Arch Docker образах
-        pacman-key --init
-        pacman-key --populate archlinux
-        # Обновим keyring
-        pacman -Sy archlinux-keyring --noconfirm
-        # Синхронизируем базу
-        pacman -Sy --noconfirm
+        # Раскомментируем multilib в pacman.conf
+        sed -Ei '/^#\[multilib\]/{s/^#//;n;s/^#//;}' /etc/pacman.conf
+        pacman -Syy --noconfirm
 
-    # Установка зависимостей
-    - name: Install build dependencies
+    - name: Install packages dependencies
       run: |
         pacman -Sy --noconfirm \
           base-devel git wget unzip \
-          clang lld mingw-w64-clang \
+          clang lld mingw-w64-gcc \
           cmake ninja pkgconf python \
-          vulkan-icd-loader lib32-vulkan-icd-loader \
-          freetype2 lib32-freetype2 \
-          libx11 lib32-libx11 \
-          libpulse lib32-libpulse \
-          gtk3 lib32-gtk3 \
-          libpng lib32-libpng \
-          giflib lib32-giflib \
-          openal lib32-openal \
-          gnutls lib32-gnutls \
-          libxslt lib32-libxslt \
-          sqlite lib32-sqlite \
-          libjpeg-turbo lib32-libjpeg-turbo \
-          opencl-icd-loader lib32-opencl-icd-loader \
-          v4l-utils lib32-v4l-utils \
-          libxrandr lib32-libxrandr \
-          libxcursor lib32-libxcursor \
-          libxinerama lib32-libxinerama \
-          alsa-lib lib32-alsa-lib \
-          alsa-plugins lib32-alsa-plugins \
-          gst-plugins-base-libs lib32-gst-plugins-base-libs
+          vulkan-icd-loader \
+          freetype2 \
+          libx11 \
+          libpulse \
+          gtk3 \
+          libpng \
+          giflib \
+          openal \
+          gnutls \
+          libxslt \
+          sqlite \
+          libjpeg-turbo \
+          opencl-icd-loader \
+          v4l-utils \
+          libxrandr \
+          libxcursor \
+          libxinerama \
+          alsa-lib \
+          alsa-plugins \
+          gst-plugins-base-libs \
+          lib32-libx11 \
+          lib32-freetype2 \
+          lib32-vulkan-icd-loader \
+          lib32-giflib \
+          lib32-openal \
+          lib32-gnutls \
+          lib32-libxslt \
+          lib32-sqlite \
+          lib32-libjpeg-turbo \
+          lib32-opencl-icd-loader \
+          lib32-v4l-utils \
+          lib32-libxrandr \
+          lib32-libxcursor \
+          lib32-libxinerama \
+          lib32-alsa-lib \
+          lib32-alsa-plugins \
+          lib32-gst-plugins-base-libs
 
-    # Выполнение скрипта сборки
     - name: Run build script
       run: |
         chmod +x scripts/build.sh
         ./scripts/build.sh
 
-    # Загрузка .wcp как артефакта
     - name: Upload WCP artifact
       uses: actions/upload-artifact@v4
       with:
