--- a/.github/workflows/ci-arm64ec-wine.yml
+++ b/.github/workflows/ci-arm64ec-wine.yml
@@ -13,16 +13,16 @@ jobs:
       image: archlinux:latest
 
     env:
-      LLVM_MINGW_VER: "20260127"
+      LLVM_MINGW_VER: "20251118"
       WCP_NAME: "wine-arm64ec-tkg"
 
     steps:
 
-    - name: Setup LLVM Mingw URL
-      # Формируем переменную LLVM_MINGW_URL через GitHub expression
-      run: echo "LLVM_MINGW_URL=https://github.com/mstorsjo/llvm-mingw/releases/download/${{ env.LLVM_MINGW_VER }}/llvm-mingw-${{ env.LLVM_MINGW_VER }}-ucrt-x86_64.tar.xz" >> $GITHUB_ENV
+    - name: Set LLVM_MINGW_URL
+      run: |
+        echo "LLVM_MINGW_URL=https://github.com/mstorsjo/llvm-mingw/releases/download/${{ env.LLVM_MINGW_VER }}/llvm-mingw-${{ env.LLVM_MINGW_VER }}-ucrt-x86_64.tar.xz" >> $GITHUB_ENV
 
-    - name: Sync pacman database
+    - name: Sync pacman
       run: pacman -Sy --noconfirm
 
     - name: Install dependencies
@@ -42,7 +42,7 @@ jobs:
       run: |
         wget $LLVM_MINGW_URL -O llvm-mingw.tar.xz
         tar -xf llvm-mingw.tar.xz -C /opt
-        echo "/opt/llvm-mingw-${LLVM_MINGW_VER}-ucrt/bin" >> $GITHUB_PATH
+        echo "/opt/llvm-mingw-${LLVM_MINGW_VER}-ucrt-x86_64/bin" >> $GITHUB_PATH
 
     - name: Checkout Wine arm64ec fork
       run: |
@@ -50,7 +50,7 @@ jobs:
         cd wine-src
         git checkout arm64ec
 
-    - name: Clone wine‑tkg builder
+    - name: Clone wine‑tkg build system
       run: |
         git clone https://github.com/Frogging-Family/wine-tkg-git.git wine-tkg
 
