--- a/.github/workflows/ci-arm64ec-wine.yml
+++ b/.github/workflows/ci-arm64ec-wine.yml
@@ -13,14 +13,14 @@ jobs:
       image: archlinux:latest
 
     env:
-      LLVM_MINGW_VER: "20251118"
+      LLVM_MINGW_VER: "20251216"     # точный релиз, который ты указал
       WCP_NAME: "wine-arm64ec-tkg"
 
     steps:
 
     - name: Set LLVM_MINGW_URL
       run: |
-        echo "LLVM_MINGW_URL=https://github.com/mstorsjo/llvm-mingw/releases/download/${{ env.LLVM_MINGW_VER }}/llvm-mingw-${{ env.LLVM_MINGW_VER }}-ucrt-x86_64.tar.xz" >> $GITHUB_ENV
+        echo "LLVM_MINGW_URL=https://github.com/mstorsjo/llvm-mingw/releases/download/${{ env.LLVM_MINGW_VER }}/llvm-mingw-${{ env.LLVM_MINGW_VER }}-ucrt-x86_64.zip" >> $GITHUB_ENV
 
     - name: Sync pacman
       run: pacman -Sy --noconfirm
@@ -40,8 +40,9 @@ jobs:
 
     - name: Setup LLVM‑Mingw toolchain
       run: |
-        wget $LLVM_MINGW_URL -O llvm-mingw.tar.xz
-        tar -xf llvm-mingw.tar.xz -C /opt
+        wget $LLVM_MINGW_URL -O llvm-mingw.zip
+        unzip llvm-mingw.zip -d /opt
+        # предполагается, что архив распакует директорию вида llvm-mingw-20251216-ucrt-x86_64
         echo "/opt/llvm-mingw-${LLVM_MINGW_VER}-ucrt-x86_64/bin" >> $GITHUB_PATH
 
     - name: Checkout Wine arm64ec fork
