--- a/.github/workflows/ci-arm64ec-wine.yml
+++ b/.github/workflows/ci-arm64ec-wine.yml
@@ -18,6 +18,9 @@ jobs:
 
     steps:
 
+    - name: Checkout repository
+      uses: actions/checkout@v4
+
     - name: Set LLVM_MINGW_URL
       run: |
         echo "LLVM_MINGW_URL=https://github.com/mstorsjo/llvm-mingw/releases/download/${{ env.LLVM_MINGW_VER }}/llvm-mingw-${{ env.LLVM_MINGW_VER }}-ucrt-x86_64.zip" >> $GITHUB_ENV
