--- a/.github/workflows/ci-arm64ec-wine.yml
+++ b/.github/workflows/ci-arm64ec-wine.yml
@@ -1,4 +1,4 @@
-name: Build Wine ARM64EC + tkg
+name: Build Wine ARM64EC with Staging + tkg
 
 on:
   push:
@@ -13,58 +13,39 @@ jobs:
       image: archlinux:latest
 
     env:
-      LLVM_MINGW_VER: "20251216"     # точный релиз, который ты указал
-      WCP_NAME: "wine-arm64ec-tkg"
+      LLVM_MINGW_VER: "20251216"
+      WCP_NAME: "wine-arm64ec-staging-tkg"
 
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-    - name: Checkout repository
-      uses: actions/checkout@v4
+      - name: Install dependencies
+        run: |
+          pacman -Sy --noconfirm \
+            base-devel git wget unzip \
+            ninja cmake pkgconf python \
+            vulkan-icd-loader freetype2 \
+            libx11 libpulse gtk3 libpng giflib \
+            openal gnutls libxslt sqlite \
+            libjpeg-turbo opencl-icd-loader \
+            v4l-utils libxrandr libxcursor \
+            libxinerama alsa-lib alsa-plugins \
+            gst-plugins-base-libs
 
-    - name: Set LLVM_MINGW_URL
-      run: |
-        echo "LLVM_MINGW_URL=https://github.com/mstorsjo/llvm-mingw/releases/download/${{ env.LLVM_MINGW_VER }}/llvm-mingw-${{ env.LLVM_MINGW_VER }}-ucrt-x86_64.zip" >> $GITHUB_ENV
+      - name: Setup LLVM-Mingw toolchain
+        run: |
+          wget https://github.com/mstorsjo/llvm-mingw/releases/download/${{ env.LLVM_MINGW_VER }}/llvm-mingw-${{ env.LLVM_MINGW_VER }}-ucrt-x86_64.zip -O llvm-mingw.zip
+          unzip llvm-mingw.zip -d /opt
+          echo "/opt/llvm-mingw-${{ env.LLVM_MINGW_VER }}-ucrt-x86_64/bin" >> $GITHUB_PATH
 
-    - name: Sync pacman
-      run: pacman -Sy --noconfirm
+      - name: Build Wine ARM64EC
+        run: |
+          chmod +x ./build.sh
+          ./build.sh
 
-    - name: Install dependencies
-      run: |
-        pacman -Sy --noconfirm \
-          base-devel git wget unzip \
-          clang lld cmake ninja pkgconf python \
-          vulkan-icd-loader freetype2 \
-          libx11 libpulse gtk3 libpng giflib \
-          openal gnutls libxslt sqlite \
-          libjpeg-turbo opencl-icd-loader \
-          v4l-utils libxrandr libxcursor \
-          libxinerama alsa-lib alsa-plugins \
-          gst-plugins-base-libs
-
-    - name: Setup LLVM‑Mingw toolchain
-      run: |
-        wget $LLVM_MINGW_URL -O llvm-mingw.zip
-        unzip llvm-mingw.zip -d /opt
-        # предполагается, что архив распакует директорию вида llvm-mingw-20251216-ucrt-x86_64
-        echo "/opt/llvm-mingw-${LLVM_MINGW_VER}-ucrt-x86_64/bin" >> $GITHUB_PATH
-
-    - name: Checkout Wine arm64ec fork
-      run: |
-        git clone https://github.com/AndreRH/wine.git wine-src
-        cd wine-src
-        git checkout arm64ec
-
-    - name: Clone wine‑tkg build system
-      run: |
-        git clone https://github.com/Frogging-Family/wine-tkg-git.git wine-tkg
-
-    - name: Run build script
-      run: |
-        chmod +x ./build.sh
-        ./build.sh
-
-    - name: Upload build artifact
-      uses: actions/upload-artifact@v4
-      with:
-        name: ${{ env.WCP_NAME }}
-        path: "*.wcp"
+      - name: Upload artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: ${{ env.WCP_NAME }}
+          path: "*.wcp"
