--- a/.github/workflows/ci-arm64ec-wine.yml
+++ b/.github/workflows/ci-arm64ec-wine.yml
@@ -2,7 +2,7 @@ name: Build Wine ARM64EC (Arch Linux)
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   pull_request:
 
 jobs:
@@ -17,26 +17,26 @@ jobs:
       WCP_NAME: "wine-arm64ec-staging-tkg"
 
     steps:
-      - name: Setup pacman keyring
+      - name: Initialize pacman keys
         run: |
           pacman-key --init
           pacman-key --populate archlinux
           pacman -Sy --noconfirm
 
-      - name: Install Arch build dependencies
+      - name: Install build & Wine deps
         run: |
           pacman -Sy --noconfirm \
-            base-devel git wget unzip tar \
-            llvm clang lld mingw-w64-bin mingw-w64-crt \
-            cmake ninja pkgconf python \
-            vulkan-icd-loader freetype2 \
-            libx11 libpulse gtk3 libpng \
-            libjpeg-turbo gnutls libxslt sqlite \
-            openal v4l-utils libxrandr \
-            libxcursor libxinerama alsa-lib \
-            alsa-plugins gst-plugins-base
+            base-devel git wget unzip tar pkgconf \
+            cmake ninja python \
+            freetype2 libx11 libpulse gtk3 \
+            libpng libjpeg-turbo gnutls \
+            libxslt sqlite openal v4l-utils \
+            libxrandr libxcursor libxinerama \
+            alsa-lib alsa-plugins gst-plugins-base \
+            # mingw‑w64 cross tool packages \
+            mingw-w64-gcc mingw-w64-headers mingw-w64-crt mingw-w64-winpthreads
 
-      - name: Checkout main repo
+      - name: Checkout main source repo
         uses: actions/checkout@v4
 
       - name: Checkout wine-tkg-git
@@ -45,15 +45,14 @@ jobs:
           repository: Frogging-Family/wine-tkg-git
           path: wine-tkg-git
 
-      - name: Download LLVM-Mingw (Linux toolchain)
+      - name: Download LLVM-Mingw cross toolchain
         run: |
           wget https://github.com/mstorsjo/llvm-mingw/releases/download/${{ env.LLVM_MINGW_VER }}/llvm-mingw-${{ env.LLVM_MINGW_VER }}-ucrt-ubuntu-22.04-x86_64.tar.xz -O /tmp/llvm-mingw.tar.xz
-          mkdir -p /opt/llvm
-          tar -xJf /tmp/llvm-mingw.tar.xz --strip-components=1 -C /opt/llvm
+          mkdir -p /opt/llvm-mingw
+          tar -xJf /tmp/llvm-mingw.tar.xz -C /opt/llvm-mingw --strip-components=1
 
-      - name: Add LLVM-Mingw to PATH
-        run: |
-          echo "/opt/llvm/bin" >> $GITHUB_PATH
+      - name: Add LLVM toolchain to PATH
+        run: echo "/opt/llvm-mingw/bin" >> $GITHUB_PATH
 
       - name: Verify LLVM‑MinGW
         run: |
@@ -66,7 +65,7 @@ jobs:
           chmod +x ./build.sh
           ./build.sh
 
-      - name: Upload build artifact
+      - name: Upload .wcp artifact
         uses: actions/upload-artifact@v4
         with:
           name: ${{ env.WCP_NAME }}
