--- a/.github/workflows/ci-arm64ec-wine.yml
+++ b/.github/workflows/ci-arm64ec-wine.yml
@@ -1,4 +1,4 @@
-name: Build Wine ARM64EC (Arch Linux)
+name: Build Wine ARM64EC (Arch Linux + llvm-mingw)
 
 on:
   push:
@@ -8,62 +8,66 @@ on:
 jobs:
   build-arm64ec:
     runs-on: ubuntu-latest
+
     container:
       image: archlinux:latest
 
     env:
       LLVM_MINGW_VER: "20251216"
       WCP_NAME: "wine-arm64ec-staging-tkg"
+      TARGET_TRIPLE: "x86_64-w64-windows-gnu"
 
     steps:
-    - name: Initialize pacman keys
-      run: |
-        pacman-key --init
-        pacman-key --populate archlinux
-        pacman -Sy --noconfirm
+      - name: Setup pacman keys
+        run: |
+          pacman-key --init
+          pacman-key --populate archlinux
+          pacman -Sy --noconfirm
 
-    - name: Install build prerequisites
-      run: |
-        pacman -Sy --noconfirm \
-          base-devel git wget unzip tar pkgconf \
-          cmake ninja python \
-          freetype2 libx11 libpulse gtk3 \
-          libpng libjpeg-turbo gnutls \
-          libxslt sqlite openal v4l-utils \
-          libxrandr libxcursor libxinerama \
-          alsa-lib alsa-plugins gst-plugins-base
+      - name: Install build deps
+        run: |
+          pacman -Sy --noconfirm \
+            base-devel git wget unzip tar pkgconf \
+            cmake ninja python \
+            freetype2 libx11 libpulse gtk3 \
+            libpng libjpeg-turbo gnutls \
+            libxslt sqlite openal v4l-utils \
+            libxrandr libxcursor libxinerama \
+            alsa-lib alsa-plugins gst-plugins-base
 
-    - name: Checkout main source
-      uses: actions/checkout@v4
+      - name: Checkout source
+        uses: actions/checkout@v4
 
-    - name: Checkout wine‑tkg‑git
-      uses: actions/checkout@v4
-      with:
-        repository: Frogging-Family/wine-tkg-git
-        path: wine-tkg-git
+      - name: Checkout wine‑tkg‑git
+        uses: actions/checkout@v4
+        with:
+          repository: Frogging-Family/wine-tkg-git
+          path: wine-tkg-git
 
-    - name: Download LLVM‑MinGW cross toolchain
-      run: |
-        wget https://github.com/mstorsjo/llvm-mingw/releases/download/${{ env.LLVM_MINGW_VER }}/llvm-mingw-${{ env.LLVM_MINGW_VER }}-ucrt-ubuntu-22.04-x86_64.tar.xz -O /tmp/llvm-mingw.tar.xz
-        mkdir -p /opt/llvm-mingw
-        tar -xJf /tmp/llvm-mingw.tar.xz -C /opt/llvm-mingw --strip-components=1
+      - name: Download LLVM‑MinGW cross toolchain
+        run: |
+          wget https://github.com/mstorsjo/llvm-mingw/releases/download/${{ env.LLVM_MINGW_VER }}/llvm-mingw-${{ env.LLVM_MINGW_VER }}-ucrt-ubuntu-22.04-x86_64.tar.xz -O /tmp/llvm-mingw.tar.xz
+          mkdir -p /opt/llvm-mingw
+          tar -xJf /tmp/llvm-mingw.tar.xz -C /opt/llvm-mingw --strip-components=1
 
-    - name: Add LLVM‑MinGW to PATH
-      run: echo "/opt/llvm-mingw/bin" >> $GITHUB_PATH
+      - name: Add toolchain to PATH
+        run: echo "/opt/llvm-mingw/bin" >> $GITHUB_PATH
 
-    - name: Verify toolchain
-      run: |
-        clang --version
-        lld --version
-        lld-link --version || true
+      - name: Verify LLVM‑MinGW
+        run: |
+          clang --version
+          lld --version
+          lld-link --version || true
 
-    - name: Run build script
-      run: |
-        chmod +x ./build.sh
-        ./build.sh
+      - name: Build Wine using proper clang target
+        run: |
+          export CC="clang --target=${{ env.TARGET_TRIPLE }} -fuse-ld=lld-link"
+          export CXX="clang++ --target=${{ env.TARGET_TRIPLE }} -fuse-ld=lld-link"
+          chmod +x ./build.sh
+          ./build.sh
 
-    - name: Upload artifact
-      uses: actions/upload-artifact@v4
-      with:
-        name: ${{ env.WCP_NAME }}
-        path: "*.wcp"
+      - name: Upload artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: ${{ env.WCP_NAME }}
+          path: "*.wcp"
